--- a/client/public/index.html
+++ b/client/public/index.html
@@ -5,10 +5,14 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
+
+    <meta name="title" property="og:title" content="BootCampCoder">
+    <meta name="image" property="og:image" content="./logo.png">
+    <meta name="description" property="og:description" content="BootCampCoder is a discussion board for programming-related technical questions. We also provide a link to GitHub and display useful information about your repositories.">
+    <meta name="author" content="Obie Munoz">
+
+
+
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
@@ -24,7 +28,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>BootCampCoder</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
