--- a/client/public/index.html
+++ b/client/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
 
     <meta name="title" property="og:title" content="BootCampCoder">
-    <meta name="image" property="og:image" content="./logo.png">
+    <meta name="image" property="og:image" content="%PUBLIC_URL%/logo.png">
     <meta name="description" property="og:description" content="BootCampCoder is a discussion board for programming-related technical questions. We also provide a link to GitHub and display useful information about your repositories.">
     <meta name="author" content="Obie Munoz">
 
