Update HTML and minor styling changes to tables

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -6,12 +6,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
 
-    <meta name="title" property="og:title" content="BootCampCoder">
-    <meta name="image" property="og:image" content="%PUBLIC_URL%/logo.png">
-    <meta name="description" property="og:description" content="BootCampCoder is a discussion board for programming-related technical questions. We also provide a link to GitHub and display useful information about your repositories.">
-    <meta name="author" content="Obie Munoz">
+    <!-- LinkedIn Meta Tags -->
+    <meta name="title" property="og:title" content="BootCampCoder" />
+    <meta name="image" property="og:image" content="%PUBLIC_URL%/logo.png" />
+    <meta
+      name="description"
+      property="og:description"
+      content="BootCampCoder is a discussion board for programming-related technical questions. We also provide a link to GitHub and display useful information about your repositories."
+    />
+    <meta name="author" content="Obie Munoz" />
+    <!-- End LinkedIn Section -->
 
-
+    <!-- Twitter Meta Tags -->
+    <meta name="twitter:card" content="summary" />
+    <meta name="twitter:creator" content="@obiemunoz" />
+    <meta property="og:url" content="http://www.bootcampcoder.com" />
+    <!-- End Twitter Section -->
 
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
